# RT-Spark-L

./: .config  .gitignore  Kconfig  README.md  SConstruct  mklinks.bat  rtconfig.h  rtconfig.py
HAL/: HAL.c  HAL.cpp  HAL.h  HAL_Button.cpp  HAL_Config.h  HAL_Def.h  HAL_LCD.cpp  HAL_RTC.cpp  HAL_SDCard.cpp  HAL_SPI_Flash.cpp  SConscript
HAL/Button/: HAL_button.c  HAL_button.h
HAL/LCD/: HAL_LCD.c  HAL_lcd.c  HAL_lcd.h
HAL/RTC/: HAL_rtc.c  HAL_rtc.h
HAL/SDCard/: HAL_sdcard.c  HAL_sdcard.h
applications/: App.c  App.cpp  App.h  SConscript  Version.h  main.c  main.cpp
applications/DataProc/: DP_LIST.inc  DP_NovelReader.cpp  DataProc.cpp  DataProc.h  DataProc_Def.h  SConscript
applications/Pages/: AppFactory.cpp  AppFactory.h  Page.h  SConscript
applications/Pages/Reader/: Reader.cpp  Reader.h  ReaderModel.cpp  ReaderModel.h  ReaderView.cpp  ReaderView.h
applications/Pages/StartUp/: StartUp.cpp  StartUpModel.cpp  StartUpModel.h  StartUpView.cpp  StartUpView.h
applications/Pages/StatusBar/: StatusBar.cpp  StatusBar.h
applications/Pages/SystemInfos/: SystemInfos.cpp  SystemInfos.h  SystemInfosModel.cpp  SystemInfosModel.h  SystemInfosView.cpp
applications/Pages/_Template/: Template.cpp  Template.h  TemplateModel.h  TemplateView.h
applications/Resource/: ResourcePool.cpp  ResourcePool.h  SConscript
applications/Resource/Font/: font_agencyb_36.c  font_bahnschrift_13.c  font_bahnschrift_17.c  font_bahnschrift_32.c  font_bahnschrift_65.c
applications/Resource/Image/: img_src_alarm.c  img_src_battery.c  img_src_battery_info.c  img_src_bicycle.c  img_src_compass.c  img_src_gps_arrow_dark.c  img_src_gps_arrow_default.c  img_src_gps_arrow_light.c  img_src_gps_pin.c  img_src_gyroscope.c  img_src_locate.c  img_src_map_location.c  img_src_menu.c  img_src_origin_point.c  img_src_pause.c  img_src_satellite.c  img_src_sd_card.c  img_src_start.c  img_src_stop.c  img_src_storage.c  img_src_system_info.c  img_src_time_info.c  img_src_trip.c
applications/Utils/DataCenter/: Account.cpp  Account.h  DataCenterLog.h  SConscript
applications/Utils/PageManager/: PM_Base.cpp  PM_Log.h  PageBase.h  PageManager.h
applications/Utils/Reader/: Reader.cpp  Reader.h  ReaderModel.cpp  ReaderModel.h  ReaderView.h  SConscript_none
applications/Utils/Reader-v0.0.1/: Reader.cpp  Reader.h  Reader0927.cpp  Reader0927.h  SConscript
applications/Utils/ResourceManager/: ResourceManager.cpp  SConscript
applications/Utils/lv_anim_label/: SConscript  lv_anim_label.h
applications/Utils/lv_ext/: SConscript  lv_anim_timeline_wrapper.h  lv_obj_ext_func.h
applications/lv_port/: SConscript  lv_conf.h  lv_font_chn_xingkai.c  lv_port.c  lv_port.cpp  lv_port_disp.cpp  lv_port_fs.c  lv_port_fs.cpp  lv_port_fs.h  lv_port_indev.cpp  lv_port_indev.h
applications/lv_port/demo/: SConscript  lv_demo.c  lv_demo_calendar.c
applications/lv_port/example/: SConscript  lv_example.c
applications/nes/: SConscript
applications/nes/port/: nes_port.c  rt_key_scan.c  rt_key_scan.h
applications/nes/src/: nes_rom.c
board/: SConscript
board/CubeMX_Config/Inc/: stm32f4xx_hal_conf.h
board/linker_scripts/: link.lds
libraries/: Kconfig
libraries/Board_Drivers/: Drv_FileSystem.c  SConscript  drv_FileSystem.c
libraries/Board_Drivers/Audio_ES8388/: drv_es8388.c  drv_es8388.h  drv_sound.c
libraries/Board_Drivers/LCD_ST7789/: Drv_ST7789.c  Drv_ST7789.h  Drv_ST7789_Fonts.h  drv_ST7789.c  drv_ST7789.h  drv_ST7789_Fonts.h
libraries/Board_Drivers/MultiButton/: MultiButton.c  MultiButton.h
libraries/Board_Drivers/fal/: fal_cfg.h
libraries/HAL_Drivers/: drv_common.c  drv_gpio.h
libraries/STM32F4xx_HAL/: SConscript
offline_pkgs/: Kconfig
offline_pkgs/LVGL-v8.3.5/env_support/rt-thread/: SConscript  lv_rt_thread_port.cpp
rt-thread/: .gitignore
stm32f407zgt6/: .config  .gitignore  CMakeLists.txt  Kconfig  SConstruct  project.uvoptx  project.uvprojx  rtconfig.h  template.uvoptx  template.uvprojx
stm32f407zgt6/applications/: App.cpp  App.h  SConscript  armv6O0fix.c  main.cpp
stm32f407zgt6/applications/Utils/Reader-beta/: Reader.cpp  Reader.h  SConscript  bullshit.txt  sanguo.txt  三国演义.txt
stm32f407zgt6/board/: Kconfig
stm32f407zgt6/board/board_drivers/: SConscript
stm32f407zgt6/board/board_drivers/audio_es8388/: drv_es8388.c
stm32f407zgt6/board/board_drivers/lcd_st7789/: drv_st7789.c  drv_st7789.h
stm32f407zgt6/board/board_drivers/spi_falsh_w25q64/: drv_soft_spi_flash.c  drv_spi_falsh.c
stm32f407zgt6/board/linker_scripts/: link.lds
stm32f407zgt6/board/ports/: SConscript
stm32f407zgt6/board/ports/fal/: fal_spi_flash_sfud_port.c
stm32f407zgt6/board/ports/lvgl/: SConscript  lv_conf.h  lv_port.cpp  lv_port.h  lv_port_disp.cpp  lv_port_fs.cpp  lv_port_indev.cpp
stm32f407zgt6/hal/: SConscript  hal.cpp  hal.h  hal_button.cpp  hal_config.h  hal_def.h  hal_lcd.cpp  hal_rtc.cpp  hal_sdcard.cpp  hal_spi_flash.cpp
